--- a/app_update.json
+++ b/app_update.json
@@ -1,10 +1,8 @@
 {
   "latestVersion": "1.2.2",
   "latestVersionCode": "2",
-  "url": "https://github.com/javiersantos/AppUpdater/releases",
+  "url": "https://play.google.com/store/apps/details?id=com.music.jio",
   "releaseNotes": [
-    "- First evolution",
-    "- Second evolution",
-    "- Bug fixes"
+    "- First evolution"
   ]
 }
