--- a/app_update.json
+++ b/app_update.json
@@ -3,6 +3,6 @@
   "latestVersionCode": "2",
   "url": "https://play.google.com/store/apps/details?id=com.music.jio",
   "releaseNotes": [
-    "- First evolution"
+    "- Bug Fixed"
   ]
 }
